module(name = "cpp-examples", version = "1.0")

bazel_dep(name = "google_benchmark", version = "1.8.4")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/agegechkori/bazel-compile-commands-extractor.git",
    commit = "810dad81f9958cbe3a104e73e55cd3b4098e2ef2",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
